--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
   "screenshots": [],
   "platform": "17.0.0.0",
   "application": "17.0.0.0",
+  "features": ["TranslationFile"],
   "idRanges": [
     {
       "from": 50100,
